<resources>
    <string name="app_name">CS414GroupNewAndroid</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phone_string">Phone:</string>
    <string name="name_string">Name:</string>
    <string name="street_string">Address:</string>
    <string name="city_string">City:</string>
    <string name="state_string">State:</string>
    <string name="zip_string">Zip:</string>
    <string name="delivery_string">Delivery</string>
    <string name="pickup_string">Pickup</string>
    <string name="carryout_string">Carry Out</string>

    <string-array name="order_types">
        <item>Pickup</item>
        <item>Carry Out</item>
        <item>Delivery</item>
    </string-array>
</resources>
