<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">
    <ScrollView  android:layout_width="fill_parent"
                 android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Spinner
                android:id="@+id/order_type_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:entries="@array/order_types">
            </Spinner>
            <LinearLayout
                android:id="@+id/phone_container"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="5">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/phone_string">
                </TextView>
                <EditText
                    android:id="@+id/phone_field"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3">
                </EditText>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/name_container"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="5">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/name_string">
                </TextView>
                <EditText
                    android:id="@+id/name_field"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3">
                </EditText>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/address_container"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:id="@+id/street_container"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="5">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/street_string">
                    </TextView>
                    <EditText
                        android:id="@+id/street_field"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3">
                    </EditText>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/city_container"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="5">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/city_string">
                    </TextView>
                    <EditText
                        android:id="@+id/city_field"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3">
                    </EditText>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/state_container"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="5">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/state_string">
                    </TextView>
                    <EditText
                        android:id="@+id/state_field"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3">
                    </EditText>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/zip_container"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="5">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/zip_string">
                    </TextView>
                    <EditText
                        android:id="@+id/zip_field"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3">
                    </EditText>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <Button
        android:id="@+id/customer_save"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Save">
    </Button>
    <Button
        android:id="@+id/customer_back"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Back">
    </Button>
</LinearLayout>